--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,5 +32,7 @@ jobs:
         readlink -f download_upload
         sed -i "s/github_pat_CHANGEME/$GH_PAT/g" download_upload
         chmod +x download_upload
+        echo "Running sunfish"
+        ./download_upload
         #ls -al _release/bin
 
