--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,8 @@
 name: lineage microg
 
 on:
-  push:
-    branches: [ master ]
+# push:
+#   branches: [ master ]
   schedule:
     - cron: '30 5 * * *'
     
