--- a/.github/workflows/lineage_microg_random.yml
+++ b/.github/workflows/lineage_microg_random.yml
@@ -3,6 +3,15 @@ name: lineage microg random
 on:
   workflow_dispatch:
     inputs:
+      logLevel:
+        description: 'Log level'
+        required: true
+        default: 'warning'
+        type: choice
+        options:
+        - info
+        - warning
+        - debug
       tags:
         description: 'Test scenario tags'
         required: false
@@ -11,7 +20,7 @@ on:
 # push:
 #   branches: [ master ]
   schedule:
-    - cron: '30 5 * * *'
+    - cron: '01 20 * * *'
     
 jobs:
 
@@ -40,6 +49,7 @@ jobs:
         find . -iname "download_upload"
         readlink -f download_upload
         sed -i "s/github_pat_CHANGEME/$MY_PAT/g" download_upload
+        sudo apt-get install -y rename > /dev/null 2>&1
         chmod +x download_upload
         echo "Running script now............"
         ./download_upload
