--- a/.github/workflows/lineage_microg_random.yml
+++ b/.github/workflows/lineage_microg_random.yml
@@ -5,7 +5,7 @@ on:
     inputs:
       logLevel:
         description: 'Log level'
-        required: true
+        required: false
         default: 'warning'
         type: choice
         options:
@@ -20,7 +20,7 @@ on:
 # push:
 #   branches: [ master ]
   schedule:
-    - cron: '26 17 * * *'
+    - cron: '30 17 * * *'
     
 jobs:
 
